--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,9 @@
 ===================
 
 	- [Sandro] Snapps and Widget - Revise. No method should have more than 10 lines.
-	- Receivers - Make all code use "new Receiver(signal)" instead of signal.addReceiver(Omnivore). All uses are now causing deprecated warnings.
+	- Receivers
+		- Make all code use "new Receiver(signal)" instead of signal.addReceiver(Omnivore). All uses are now causing deprecated warnings.
+		- Remove @Deprecated annotation from EventSource, ListSignal and SetSignal methods.
 
 	- Contact List - (Host addresses for Sneer developers are HARDCODED)
 		- Online indicator icon
