--- a/todo.txt
+++ b/todo.txt
@@ -3,15 +3,12 @@
 
 	- Receivers
 		- Make all code use "new Receiver(signal)" instead of signal.addReceiver(Omnivore). All uses are now causing deprecated warnings.
-		- Remove @Deprecated annotation from EventSource, ListSignal and SetSignal methods.
+		- Remove @Deprecated annotation from EventSource.
 	- Remove all console output from tests except "Test left files open...".
 	- [Sandro] Snapps and Widgets - Revise. No method should have more than 10 lines.
 
 	- Contact List - (Host addresses for Sneer developers are HARDCODED)
-		- Online indicator icon
-		- [Sandro] Get DynDns running on your machine
-		- [Bamboo] Get DynDns running on your machine
-		- [Klaus] Get DynDns running on your machine
+		- [Rodrigo seek pairing] DynDNS Client ;)	
 	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
 
 	- Brick Publish (Supposedly working already)
@@ -26,7 +23,6 @@
 	- Wind
 	---- WE DROP SKYPE CHAT :)
 	
-	- DynDNS Client ;)	
 	- Voice Calls - Migrate from the old sneermonolith project
 	---- WE DROP SKYPE :)
 
