Connection Bugs fixed. Connection to oneself rejected. MainDemo working well and supporting args.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2177 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 ﻿MAIN ROADMAP
 ===================
 
-	- Receivers
+	- [Sandro] Receivers
 		- Make all code use "new Receiver(signal)" instead of signal.addReceiver(Omnivore). All uses are now causing deprecated warnings.
 		- Remove @Deprecated annotation from EventSource.
 	- Remove all console output from tests except "Test left files open...".
