Logging mechanism progress.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2227 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -2,12 +2,13 @@
 ===================
 
 	- DynDNS Client ;)	
-	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
-
 	- Blinking lights
 		- API
 		- GUI
 	- Rudimentary Logging
+		- Logger.inline(String message, Object... messageInsets) - implement properly
+	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
+
 	- Wind
 	- Voice Calls - Migrate from the old sneermonolith project
 	---- WE DROP SKYPE :)
