--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,9 @@
 ﻿MAIN ROADMAP
 ===================
 
-	- DynDNS Client ;)	
+	- DynDNS Client ;)
+		- BL should not be turned off during attempt. Only if successful.
+		- Should not block while doing submitUpdateRequest(...). Create a new state for that.
 	- Blinking lights
 		- API
 		- GUI
