--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 ﻿MAIN ROADMAP
 ===================
 
+	- [Sandro] Tupla - Dont use Portuguese. Rename to Alarm.
+	- [Sandro] Revise your field names. They must all start with underscores.
 	- DynDNS Client ;)
 		- BL should not be turned off during attempt. Only if successful.
 		- Should not block while doing submitUpdateRequest(...). Create a new state for that.
