--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 ﻿MAIN ROADMAP
 ===================
 
+	- [Sandro] ClockTest - Uncomment the two lines that are commented. The test should run but it fails. Fix.
 	- [Sandro] Revise your field names. They must all start with underscores.
 	- DynDNS Client ;)
 		- BL should not be turned off during attempt. Only if successful.
