--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,7 @@
 ===================
 
 	- [Sandro] ClockTest - Uncomment the two lines that are commented. The test should run but it fails. Fix.
+	- [Sandro] ClockImpl.checkTime() - Refactor. I (Klaus) cannot understand it. Use a TreeSet so you never have to sort the collection. User iterator.remove() to remove the elements.
 	- [Sandro] Revise your field names. They must all start with underscores.
 	- DynDNS Client ;)
 		- BL should not be turned off during attempt. Only if successful.
