Refactor ClockImpl.checkTime(). Now using a TreeSet and a iterator.remove() to remove the elements.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2315 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -2,11 +2,10 @@
 ===================
 
 	- [Sandro] ClockTest - Uncomment the two lines that are commented. The test should run but it fails. Fix.
-	- [Sandro] ClockImpl.checkTime() - Refactor. I (Klaus) cannot understand it. Use a TreeSet so you never have to sort the collection. User iterator.remove() to remove the elements.
-	- [Sandro] Revise your field names. They must all start with underscores.
+
+	- [Klaus] Priority?
 		- Revise ThingHomeImpl visibility
-		- Revise ByteArraySocketImpl visibility
-		
+		- Revise ByteArraySocketImpl visibility		
 	- DynDNS Client ;)
 		- BL should not be turned off during attempt. Only if successful.
 		- Should not block while doing submitUpdateRequest(...). Create a new state for that.
