git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2321 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 ﻿MAIN ROADMAP
 ===================
 
-	- [Klaus] Priority?
+	- [Sandro]
 		- Revise ThingHomeImpl visibility
 		- Revise ByteArraySocketImpl visibility		
 	- DynDNS Client ;)
