--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 ﻿MAIN ROADMAP
 ===================
+	- Fix the Hudson build.
 	- DynDNS Client ;)
+		- Make clock tick. 
 		- BL should not be turned off during attempt. Only if successful.
 		- Should not block while doing submitUpdateRequest(...). Create a new state for that.
 	- Blinking lights
