--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 ﻿MAIN ROADMAP
 ===================
-	- Fix the Hudson build.
+	- [Rodrigo helping Kalecser] Fix the Hudson build.
 	- DynDNS Client ;)
 		- Make clock tick. 
 		- BL should not be turned off during attempt. Only if successful.
