--- a/todo.txt
+++ b/todo.txt
@@ -2,12 +2,9 @@
 ===================
 	- [Rodrigo helping Kalecser] Fix the Hudson build.
 	- DynDNS Client ;)
-		- Make clock tick. 
 		- BL should not be turned off during attempt. Only if successful.
 		- Should not block while doing submitUpdateRequest(...). Create a new state for that.
-	- Blinking lights
-		- API
-		- GUI
+	- [Sandro] Create a better icon for LightType.INFO. Blue is being used for the new LightType.GOOD_NEWS.
 	- Rudimentary Logging
 		- Logger.inline(String message, Object... messageInsets) - implement properly
 	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
