--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 ﻿MAIN ROADMAP
 ===================
-	- [Sandro] DynDnsClient state persistence is "generic" for any state. Refactor: Make it simpler: specific for the waiting state. Use only one key: LAST_UPDATE_REQUEST_TIME_KEY. If the store contains that key, you know you are in a waiting state. Only make things generic when necessary, not speculatively. Actually, the waiting period in DynDnsClient does not need to be persisted. What you have to persist is the period in OwnIpDiscoverer.  
+	- [Sandro] DynDnsClient state persistence is "generic" for any state. Refactor: Make it simpler: specific for the waiting state. Use only one key: LAST_UPDATE_REQUEST_TIME_KEY. If the store contains that key, you know you are in a waiting state. Only make things generic when necessary, not speculatively. Actually, the waiting period in DynDnsClient does NOT need to be persisted. Revert everything. What we have to persist is the period in OwnIpDiscoverer. :P  
 	- RFactory - Rename to ReactiveWidgetFactory
 	- [Rodrigo helping Kalecser] Fix the Hudson build.
 	- DynDNS Client ;)
