refactoring: Snapp --> Instrument
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2436 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@
 ===================
 	- [Rodrigo and Kalecser] Fix the Hudson build.
 	- [Sandro] Introduce yourself on the sneercoders group.
+	- [Sandro] "Snapp" - Rename to "Instrument" when refering to gui windows
+	- Snapps - Move to respective .gui subpackage in the pulp except for Wind.
 	- Rudimentary Logging
 		- Logger.inline(String message, Object... messageInsets) - implement properly
 	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
