--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@
 	- [Rodrigo and Kalecser] Fix the Hudson build.
 	- [Sandro] Introduce yourself on the sneercoders group.
 	- [Sandro] "Snapp" - Rename to "Instrument" when refering to gui windows
+	- [Sandro] notifyAllChanges - Fix
 	- Snapps - Move to respective .gui subpackage in the pulp except for Wind.
 	- Rudimentary Logging
 		- Logger.inline(String message, Object... messageInsets) - implement properly
