--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,6 @@
 	- [Sandro] "Snapp" - Rename to "Instrument" when refering to gui windows
 	- [Sandro] notifyAllChanges - Fix
 	- Snapps - Move to respective .gui subpackage in the pulp except for Wind.
-	- Rudimentary Logging
-		- Logger.inline(String message, Object... messageInsets) - implement properly
 	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
 
 	- Wind
@@ -79,7 +77,6 @@
     	- Public Files
 	- Brick
 		- Uninstall
-			auditing
 		- Update
 	- Kernel Update
 		- Auto Update
@@ -97,8 +94,7 @@
 	- Revise project structure - sourcefolders, package names, build.xml, etc
 	---------------------------------- DEVELOPER COMMUNITY BETA RELEASE
 	
-	- Public Forums/Blog/Fotolog?
-		- Rich text?
+	- Public Forums
 	- TopTen
 	- Annotations/Comments/Tags
 	- Synonyms
@@ -129,8 +125,7 @@
 	- Secure Channel-Crypto
 	- Persistence-Crypto
 	- Simple CPU Sharing
-	- Appearance (Visual Identity)
-		- Multiple Look-N-Feels
+	- Multiple Look-N-Feels
 		- Napkin Default Look-N-Feel
 	---------------------------------- MAJOR PUBLIC RELEASE (2.0)
 	
@@ -169,27 +164,6 @@
 
 [END OF OFFICIAL TODO LIST]
 
-
-
-CONTAINER STUFF
-	- Concurrency
-		- Brick Types:
-			- Synchronized (Default) - "Must" return "instantly". See "Natural Selection". 
-			- @FreeThreaded
-		- "Natural Selection" - Community decides who lives.
-			- Stats - Provide users with stats about brick responsiveness.
-			- Kill - Allow users to kill unresponsive bricks 
-		- Swing
-			- Gui bricks (Snapps) are always called in their (can there be more than one?) Swing thread, so they can operate freely on the gui.
-			- Can only reference Synchronized bricks.
-
-	- Persistence
-		- Brick Types:
-			- Persistent (@Model)
-				- implies Synchronized
-				- Can only reference @Model bricks
-				- Transaction Log for all incoming calls
-			- Transient (default)
 
 
 
