--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -5,10 +5,11 @@
 	- [Sandro] "Snapp" - Rename to "Instrument" when refering to gui windows
 	- [Sandro] notifyAllChanges boolean in Reactive fields - Fix
 	- [Sandro] Snapps - Move to respective .gui subpackage in the pulp except for Wind.
-	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
+
+	- ByteConnection legacy protocol - migrate all uses to new protocol.
 
 	- Wind
-		- ByteConnection legacy protocol - migrate all uses to new protocol.
+		- Gui - Shouter's nick, Shout time. See ConversationFrame in sneer_monolith. new SimpleDateFormat("HH:mm").format(date) + " <b>"+ sender + ":</b> " + text;
 	- Voice Calls - Migrate from the old sneermonolith project
 	---- WE DROP SKYPE :)
 	- Screen Viewing à la VNC - There is a free vnc client implementation in Java. If there is no free server implementation in java, just send screen deltas over using gzip compression for now.
